--- a/sass/components/sections.scss
+++ b/sass/components/sections.scss
@@ -1,6 +1,8 @@
 .section{
     padding:4rem;
     &-white {
+        width:calc(100% - 8rem);
+        overflow: hidden;
         background:var(--main);
         box-shadow: var(--shadow);
         .title-text{
